[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.46.1"
cargo-watch = "8.4.1"
itertools = "0.12.0"
pathfinding = "4.6.0"
petgraph = "0.6.4"
prime_factorization = "1.0.4"
rand = "0.8.5"
z3 = "0.12.1"
